--- a/postana/Cargo.toml
+++ b/postana/Cargo.toml
@@ -3,8 +3,13 @@ name = "postana"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-clap = { version = "3.1.18", features = ["derive"] }
+detector = { path = "../detector" }
+clap = { version = "3", features = ["derive"] }
 glob = "0.3"
+memmap2 = "0.5"
+cursive = "0.18"
+opener = "0.5"
+tempfile = "3"
+midasio = "0.4"
+pgfplots = "0.4"
