--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["science", "command-line-utilities"]
 
 [dependencies]
 alpha_g_detector = { version = "0.1",  path = "../detector" }
+anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 cursive = "0.20"
 glob = "0.3"
@@ -22,4 +23,3 @@ opener = "0.5"
 pgfplots = "0.5"
 serde_json = "1"
 tempfile = "3"
-thiserror = "1.0"
