--- a/detector/Cargo.toml
+++ b/detector/Cargo.toml
@@ -13,7 +13,8 @@ documentation = "https://docs.rs/alpha_g_detector"
 [dependencies]
 crc32c = "0.6"
 lazy_static = "1.4"
-thiserror = "1.0"
+serde = { version = "1", features = ["derive"] }
+thiserror = "1"
 
 [dev-dependencies]
 midasio = "0.4"
