--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Cargo Build & Test
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, staging, trying ]
   pull_request:
     branches: [ main ]
 
