--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -13,6 +13,7 @@ documentation = "https://docs.rs/alpha_g_physics"
 [dependencies]
 alpha_g_detector = { version = "0.2.0", path = "../detector" }
 lazy_static = "1.4.0"
+ron = "0.8.0"
 serde_json = "1.0.95"
 thiserror = "1.0.40"
 
