--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -12,6 +12,9 @@ documentation = "https://docs.rs/alpha_g_physics"
 
 [dependencies]
 alpha_g_detector = { version = "0.2.0", path = "../detector" }
+dyn-stack = "0.9.0"
+faer-cholesky = "0.9.1"
+faer-core = "0.9.1"
 lazy_static = "1.4.0"
 ron = "0.8.0"
 serde_json = "1.0.95"
