--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -20,8 +20,9 @@ faer-core = "0.9.1"
 lazy_static = "1.4.0"
 num-complex = "0.4.4"
 ron = "0.8.0"
+serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.95"
 thiserror = "1.0.40"
-uom = "0.35.0"
+uom = { version = "0.35.0", features = ["use_serde"] }
 
 [dev-dependencies]
