--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -15,6 +15,7 @@ alpha_g_physics = { path = "../physics" }
 anyhow = "1"
 argmin = { version = "0.8.1", default-features = false }
 clap = { version = "4", features = ["derive"] }
+csv = "1.3.0"
 cursive = "0.20"
 glob = "0.3"
 indicatif = { version = "0.17.7", features = ["rayon"] }
@@ -25,6 +26,8 @@ opener = "0.5"
 pgfplots = "0.5"
 rayon = "1.8.0"
 ron = "0.8.0"
+serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1"
 statrs = "0.16.0"
 tempfile = "3"
+uom = "0.35.0"
