--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -30,4 +30,5 @@ serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1"
 statrs = "0.16.0"
 tempfile = "3"
+thiserror = "1.0.53"
 uom = "0.35.0"
