--- a/detector/Cargo.toml
+++ b/detector/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "alpha_g_detector"
-version = "0.2.0" # Remember to also change this in the README.md
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
 description = "A Rust library to handle the raw output of the ALPHA-g detectors"
 readme = "README.md"
-repository = "https://github.com/DJDuque/alpha-g"
+repository = "https://github.com/ALPHA-g-Experiment/alpha-g"
 keywords = ["alpha", "alpha-g", "cern", "physics", "antimatter"]
 categories = ["science"]
 documentation = "https://docs.rs/alpha_g_detector"
