--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -3,15 +3,15 @@ name = "alpha-g-analysis"
 version = "0.4.0"
 edition = "2021"
 license = "MIT"
-description = "Executables that perform common post-processing/offline analysis on the data of the ALPHA-g experiment"
+description = "Analysis binaries for the ALPHA-g experiment"
 readme = "README.md"
 repository = "https://github.com/ALPHA-g-Experiment/alpha-g"
 keywords = ["alpha", "alpha-g", "cern", "physics", "antimatter"]
 categories = ["science", "command-line-utilities"]
 
 [dependencies]
-alpha_g_detector = { version = "0.3.1",  path = "../detector" }
-alpha_g_physics = { version = "0.1.0", path = "../physics" }
+alpha_g_detector = { version = "=0.3.1",  path = "../detector" }
+alpha_g_physics = { version = "=0.1.0", path = "../physics" }
 anyhow = "1.0.68"
 clap = { version = "4.0.9", features = ["derive"] }
 csv = "1.3.0"
