--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -17,13 +17,13 @@ argmin-math = "0.3.0"
 dyn-stack = "0.9.0"
 faer-cholesky = "0.9.1"
 faer-core = "0.9.1"
+indexmap = "2.1.0"
 itertools = "0.11.0"
 lazy_static = "1.4.0"
 num-complex = "0.4.4"
 ron = "0.8.0"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.95"
-statrs = "0.16.0"
 thiserror = "1.0.40"
 uom = { version = "0.35.0", features = ["use_serde"] }
 
