--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alpha-g-analysis"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2021"
 license = "MIT"
 description = "Analysis binaries for the ALPHA-g experiment"
@@ -10,8 +10,8 @@ keywords = ["alpha", "alpha-g", "cern", "physics", "antimatter"]
 categories = ["science", "command-line-utilities"]
 
 [dependencies]
-alpha_g_detector = { version = "0.3.1",  path = "../detector" }
-alpha_g_physics = { version = "=0.1.0", path = "../physics" }
+alpha_g_detector = { version = "=0.3.2",  path = "../detector" }
+alpha_g_physics = { version = "=0.1.1", path = "../physics" }
 anyhow = "1.0.68"
 clap = { version = "4.0.9", features = ["derive"] }
 csv = "1.3.0"
