--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alpha_g_physics"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 license = "MIT"
 description = "Data analysis library for the ALPHA-g experiment"
@@ -11,7 +11,7 @@ categories = ["science"]
 documentation = "https://docs.rs/alpha_g_physics"
 
 [dependencies]
-alpha_g_detector = { version = "0.3.0", path = "../detector" }
+alpha_g_detector = { version = "=0.3.2", path = "../detector" }
 argmin = { version = "0.8.1", default-features = false }
 argmin-math = "0.3.0"
 dyn-stack = "0.9.0"
