--- a/detector/Cargo.toml
+++ b/detector/Cargo.toml
@@ -15,6 +15,7 @@ crc32c = "0.6.4"
 lazy_static = "1.4.0"
 serde = { version = "1.0.195", features = ["derive"] }
 thiserror = "1.0.56"
+winnow = "0.6.1"
 
 [dev-dependencies]
 midasio = "0.5.0"
