--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,3 +42,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Check documentation
       run: RUSTDOCFLAGS="-D warnings" cargo doc
+  committed:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Lint commits
+      uses: crate-ci/committed@master
