--- a/detector/Cargo.toml
+++ b/detector/Cargo.toml
@@ -20,3 +20,12 @@ winnow = "0.6.1"
 [dev-dependencies]
 midasio = "0.5.0"
 ron = "0.8.0"
+
+[package.metadata.release]
+pre-release-replacements = [
+  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
+  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...alpha_g_detector-v{{version}}", exactly=1},
+  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
+  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
+  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/ALPHA-g-Experiment/alpha-g/compare/alpha_g_detector-v{{version}}...HEAD", exactly=1},
+]
