--- a/physics/Cargo.toml
+++ b/physics/Cargo.toml
@@ -29,3 +29,12 @@ uom = { version = "0.35.0", features = ["use_serde"] }
 
 [dev-dependencies]
 midasio = "0.5.3"
+
+[package.metadata.release]
+pre-release-replacements = [
+  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
+  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...alpha_g_physics-v{{version}}", exactly=1},
+  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
+  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
+  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/ALPHA-g-Experiment/alpha-g/compare/alpha_g_physics-v{{version}}...HEAD", exactly=1},
+]
